--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">rg-potter</string>
+    <string name="app_name">RG Potter</string>
+    <string name="app_description">Este é o seu RG potter, um APP para aqueles que amam esse universo criado por JK Rolling</string>
+    <string name="app_credits">RG Potter só foi possível pela contribuição de Felipe Beserra e Gabrielle Neves, sem contar o desenvolvedor da API que utilizamos, David Barton</string>
+    <string name="app_none"></string>
 </resources>
