--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,14 @@
     <string name="gender_m_pronoun">o</string>
     <string name="gender_f_pronoun">a</string>
     <string name="exit">Sair</string>
+    <string name="text_btn_cad">Cadastrar RG</string>
+    <string name="text_btn_view">Visualizar último RG</string>
+    <string name="text_btn_curiosity">Curiosidades</string>
+    <string name="text_more">Saiba mais sobre a Saga</string>
+    <string name="text_greeting">Olá, caro estudante de Hogwarts! Em que podemos te ajudar hoje? </string>
+    <string name="text_menu">Menu</string>
+    <string name="title_curiosity">Curiosidades</string>
+    <string name="house_curiosity">Casa de Hogwarts</string>
+    <string name="patrono_curiosity">Patrono</string>
+    <string name="bithday_curiosity">Data de nascimento</string>
 </resources>
