--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
 
     <string name="bithday">Data de nascimento</string>
     <string name="text_num">Número do RG</string>
-    <string name="text_name">Nome Completo</string>
+    <string name="text_name">Nome</string>
     <string name="text_sexo">Sexo</string>
     <string name="text_character">Com qual personagem você mais se parece?</string>
 
