--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
 
     <string name="qst_lookLike">Com qual personagem você mais se parece?</string>
     <string name="qst_sameHouse">Um personagem da sua casa!</string>
-    <string name="qst_birthday">O personagem com o aniversário mais próximo do seu!</string>
+    <string name="qst_random">Um personagem completamente aleatório!</string>
     <string name="qst_patronus">Um personagem com o seu patrono! (inglês)</string>
 
     <string name="no_result">Infelizmente não achei ninguém :(</string>
