Big refactory, not done, should be in other branch, sorry

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,15 +12,17 @@
     <string name="user_default_img"></string>
     <string name="user_default_house"></string>
     <string name="user_default_patronus"></string>
-    <string name="house_Gryffindor">Grifinória</string>
-    <string name="house_Hufflepuff">Lufa-Lufa</string>
-    <string name="house_Ravenclaw">Corvinal</string>
-    <string name="house_Slytherin">Sonserina</string>
-    <string name="house_none">Não passou por Hogwarts</string>
+    <string name="house_gryffindor">Grifinória</string>
+    <string name="house_hufflepuff">Lufa-Lufa</string>
+    <string name="house_ravenclaw">Corvinal</string>
+    <string name="house_slytherin">Sonserina</string>
+    <string name="house_none">Nenhuma</string>
     <string name="gender_m_name">Masculino</string>
     <string name="gender_f_name">Feminino</string>
+    <string name="gender_u_name">Outros</string>
     <string name="gender_m_pronoun">o</string>
     <string name="gender_f_pronoun">a</string>
+    <string name="gender_u_pronoun">o/a</string>
     <string name="exit">Sair</string>
     <string name="error">Algo deu errado :/</string>
 
