Need some fixing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="lumus_header">Solte seu feitiço!</string>
     <string name="lumus_on">Gesticule!</string>
     <string name="lumus_joke">(é leviossa não levioSSAA)</string>
+    <string name="lumus_stop">Prohibere (Parar)</string>
 
     <string name="back_menu">Voltar ao menu</string>
 
