--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">RgPotter</string>
+
+    <!-- Spell Activity -->
+    <string name="spell_lumus">Lumus</string>
+    <string name="spell_lumus_desc">Lumus turns everything on, and if it happens that you have yourself a flashlight, it might work, just saying tho</string>
+    <string name="spell_nox">Nox</string>
+    <string name="spell_nox_desc">Nox its the reverse of Lumus, i mean, flashlights drains a lot of battery!</string>
+    <string name="spell_leviosa">Wingardium Leviosa</string>
+    <string name="spell_leviosa_desc">Wingardium Leviosa, just a nice cute spell, its not LevIoSsâa is Leviousaa!</string>
+    <string name="spell_running">Wizarding around!</string>
+    <string name="spell_running_desc"></string>
+    <string name="spell_locked_swipe_warning">Reverse the spell first, Wizard!</string>
+
 </resources>
