--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">RgPotter</string>
 
+    <!-- Bottom Navbar -->
+    <string name="rg_name">RG</string>
+    <string name="spell_name">Spells</string>
+    <string name="curiosity_name">Curiosity</string>
+
     <!-- Spell Activity -->
     <string name="spell_null">Spell Null</string>
     <string name="spell_null_desc">Desc Null</string>
@@ -14,5 +19,7 @@
     <string name="spell_running_desc"></string>
     <string name="spell_locked_swipe_reverse">Reverse the spell first, Wizard!</string>
     <string name="spell_locked_swipe_running">Wait for the spell complete, Wizard!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
